# traits

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  release.sh  traits.h
.devcontainer/: Dockerfile  devcontainer.json  docker-entrypoint.sh  post-start.sh
.github/actions/devcontainer/: action.yml
.github/workflows/: coverage.yml  create-package.yml  deploy-package.yml  deploy-package.yml.deactivated  devcontainer-command.yml  examples.yml  lint.yml  linux.yml  macos.yml  release.yml  tests-and-examples.yml  tests.yml  windows.yml
cmake/: traits-config-version.cmake.in  traits-config.cmake
doc/adr/: 0001-record-architecture-decisions.md
example/: CMakeLists.txt  readme.cpp
examples/: CMakeLists.txt  quickstart.cpp  readme.cpp
include/: traits.h
tests/: CMakeLists.txt  function_type.cpp
tests/deploy/: CMakeLists.txt  main.cpp
tests/fetch/: CMakeLists.txt
